feat: add waiting state for subtasks steps
Signed-off-by: Thomas Bétrancourt <thomas@betrancourt.net>

--- a/ui/dashboard/projects/utask-lib/src/lib/@components/step-node/step-node.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/step-node/step-node.sass
@@ -29,6 +29,9 @@
 .step-red
     background: repeating-linear-gradient(45deg, #b04020, #b04020 10px, #B95439 10px, #B95439 20px)
     color: white
+.step-waiting
+    background: #8a2be2
+    color: white
 .step-default
     background-color: #fab000
     background-image: linear-gradient(45deg, #f09000 25%, transparent 25%, transparent 75%, #f09000 75%), linear-gradient(45deg, #f09000 25%, transparent 25%, transparent 75%, #f09000 75%)
