(feat): Add a new state for delayed tasks
Signed-off-by: florian.cazals <florian.cazals@ovhcloud.com>

--- a/ui/dashboard/projects/utask-lib/src/lib/@routes/task/task.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@routes/task/task.sass
@@ -72,7 +72,7 @@ nz-page-header-extra
   &_TODO, &_RUNNING
     background: $color-primary
     color: white
-  &_WAITING
+  &_WAITING, &_DELAYED
     background: $color-waiting
     color: white
 
@@ -99,6 +99,6 @@ lib-utask-steps-viewer
   &_TODO, &_RUNNING
     background: $color-primary !important
     color: white !important
-  &_WAITING
+  &_WAITING, &_TO_AUTORUN_DELAYED
     background: $color-waiting !important
     color: white !important
