--- a/ui/dashboard/projects/utask-lib/src/lib/@components/task-status/task-status.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/task-status/task-status.sass
@@ -18,11 +18,14 @@ $color-waiting: #8a2be2
     background-image: linear-gradient(-45deg, transparent 33%, rgba(0, 0, 0, .1) 33%, rgba(0, 0, 0, .1) 66%, transparent 66%)
     background-size: 4rem 100%, 100% 100%, 100% 100%
     animation: animate-state-running 1s linear infinite
+
   &.WAITING
     background-color: $color-waiting
     background-image: linear-gradient(-45deg, transparent 33%, rgba(0, 0, 0, .1) 33%, rgba(0, 0, 0, .1) 66%, transparent 66%)
     background-size: 4rem 100%, 100% 100%, 100% 100%
     animation: animate-state-running 1s linear infinite
+  &.DELAYED
+    background-color: $color-waiting
   &.CANCELLED, &.WONTFIX
     background: $color-warning
   &.BLOCKED
