fix(vscode): display errors and fix graph edge backgrounds
Signed-off-by: Thomas Bétrancourt <thomas@betrancourt.net>

--- a/vscode/web/src/app/preview/preview.component.html
+++ b/vscode/web/src/app/preview/preview.component.html
@@ -1,1 +1,3 @@
-<lib-utask-steps-viewer></lib-utask-steps-viewer>
+<utask-loader *ngIf="!resolution && !invalid"></utask-loader>
+<lib-utask-error-message *ngIf="invalid" [data]="'Unable to display the template'"></lib-utask-error-message>
+<lib-utask-steps-viewer *ngIf="resolution && !invalid" [resolution]="resolution"></lib-utask-steps-viewer>
