chore(editor): display deprecation message
Signed-off-by: Thomas Bétrancourt <thomas@betrancourt.net>

--- a/ui/editor/src/app/editor/editor.html
+++ b/ui/editor/src/app/editor/editor.html
@@ -22,6 +22,12 @@
     </ul>
   </nav>
 
+  <div class="deprecation m-0 p-0">
+    <div class="alert alert-warning" role="alert">
+      This web interface will be retired in an upcoming release, but don't worry, we've got you covered! We've developed a new VSCode extension to replace it. Download the extension now for a faster, more streamlined experience.
+    </div>
+  </div>
+
   <div class="row">
     <div class="col-6">
       <div id="ace-editor" fullHeight></div>
