feat(dashboard): display the resolver_inputs
Signed-off-by: Thomas Bétrancourt <thomas@betrancourt.net>

--- a/ui/dashboard/projects/utask-lib/src/lib/@routes/task/task.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@routes/task/task.sass
@@ -102,3 +102,15 @@ lib-utask-steps-viewer
   &_WAITING, &_TO_AUTORUN_DELAYED
     background: $color-waiting !important
     color: white !important
+
+.inputs
+  display: flex
+  flex-direction: column
+
+.input
+  .key
+    &::after
+      content: ": "
+
+  .value
+    font-family: monospace
