chore(ui): upgrade to angular 16
Signed-off-by: Thomas Bétrancourt <thomas@betrancourt.net>

--- a/ui/dashboard/projects/utask-lib/src/lib/@components/task-status/task-status.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/task-status/task-status.sass
@@ -64,3 +64,9 @@ $color-waiting: #8a2be2
       height: 100%
       transition: width 0.25s
       opacity: 0.2
+
+@keyframes animate-state-running
+  from
+    background-position-x: 0
+  to
+    background-position-x: 4rem
