chore: migrate to angular 20

--- a/ui/dashboard/projects/utask-lib/src/lib/@routes/task/task.sass
+++ b/ui/dashboard/projects/utask-lib/src/lib/@routes/task/task.sass
@@ -118,3 +118,7 @@ lib-utask-steps-viewer
 .ant-dropdown-trigger
   height: 24px
   padding: 0
+
+.compactDropdown
+  padding-right: 8px;
+  padding-left: 8px;
